<?xml version="1.0" encoding="UTF-8"?>
<!--
  Licensed to the Apache Software Foundation (ASF) under one
  or more contributor license agreements.  See the NOTICE file
  distributed with this work for additional information
  regarding copyright ownership.  The ASF licenses this file
  to you under the Apache License, Version 2.0 (the
  "License"); you may not use this file except in compliance
  with the License.  You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing,
  software distributed under the License is distributed on an
  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  KIND, either express or implied.  See the License for the
  specific language governing permissions and limitations
  under the License.
-->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.apache</groupId>
    <artifactId>apache</artifactId>
    <version>35</version>
  </parent>
  <groupId>org.apache.ddlutils</groupId>
  <artifactId>ddlutils</artifactId>
  <packaging>jar</packaging>
  <version>1.1</version>
  <name>Apache DdlUtils</name>
  <description>
    DdlUtils is a small, easy-to-use component for working with Database Definition (DDL) files.
  </description>
  <inceptionYear>2005</inceptionYear>
  <url>http://db.apache.org/ddlutils</url>

  <mailingLists>
    <mailingList>
      <name>Ddlutils Dev List</name>
      <post>ddlutils-dev@db.apache.org</post>
      <subscribe>ddlutils-dev-subscribe@db.apache.org</subscribe>
      <unsubscribe>ddlutils-dev-unsubscribe@db.apache.org</unsubscribe>
      <archive>http://mail-archives.apache.org/mod_mbox/db-ddlutils-dev/</archive>
      <otherArchives>
        <otherArchive>http://www.mail-archive.com/ddlutils-dev@db.apache.org/</otherArchive>
        <otherArchive>http://www.nabble.com/Apache-DdlUtils---Dev-f14475.html</otherArchive>
      </otherArchives>
    </mailingList>
    <mailingList>
      <name>Ddlutils User List</name>
      <post>ddlutils-user@db.apache.org</post>
      <subscribe>ddlutils-user-subscribe@db.apache.org</subscribe>
      <unsubscribe>ddlutils-user-unsubscribe@db.apache.org</unsubscribe>
      <archive>http://mail-archives.apache.org/mod_mbox/db-ddlutils-user/</archive>
      <otherArchives>
        <otherArchive>http://www.mail-archive.com/ddlutils-user@db.apache.org/</otherArchive>
        <otherArchive>http://www.nabble.com/Apache-DdlUtils---User-f14474.html</otherArchive>
      </otherArchives>
    </mailingList>
  </mailingLists>

  <issueManagement>
    <system>jira</system>
    <url>http://issues.apache.org/jira/browse/DDLUTILS</url>
  </issueManagement>

  <developers>
    <developer>
      <id>tomdz</id>
      <name>Thomas Dudziak</name>
      <email>tomdz@apache.org</email>
      <organization>ASF</organization>
    </developer>
    <developer>
      <id>mvdb</id>
      <name>Martin van den Bemt</name>
      <email>mvdb@apache.org</email>
      <organization>ASF</organization>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>scm:svn:http://svn.apache.org/repos/asf/db/ddlutils/trunk/</connection>
    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/db/ddlutils/trunk/</developerConnection>
    <url>http://svn.apache.org/viewcvs.cgi/db/ddlutils/trunk/</url>
  </scm>

  <distributionManagement>
    <site>
      <id>apache.website</id>
      <url>scp://minotaur.apache.org/www/db.apache.org/ddlutils/</url>
    </site>
  </distributionManagement>

  <properties>
    <java.version>1.8</java.version>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.apache.ant</groupId>
      <artifactId>ant</artifactId>
      <version>1.10.11</version>
      <scope>compile</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>commons-beanutils</groupId>
      <artifactId>commons-beanutils</artifactId>
      <version>1.11.0</version>
      <exclusions>
        <exclusion>
          <groupId>commons-collections</groupId>
          <artifactId>commons-collections</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>1.20.0</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-collections4</artifactId>
      <version>4.5.0</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2 -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-dbcp2</artifactId>
      <version>2.13.0</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.20.0</version>
    </dependency>
    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging-api</artifactId>
      <version>1.1</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <version>1.3.5</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-pool2 -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-pool2</artifactId>
      <version>2.13.0</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.dom4j/dom4j -->
    <dependency>
      <groupId>org.dom4j</groupId>
      <artifactId>dom4j</artifactId>
      <version>2.1.4</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.8</version>
      <!-- Optional if you don't use the ant task. -->
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>stax</groupId>
      <artifactId>stax-api</artifactId>
      <version>1.0.1</version>
    </dependency>
    <dependency>
      <groupId>woodstox</groupId>
      <artifactId>wstx-asl</artifactId>
      <version>3.2.6</version>
      <scope>runtime</scope>
      <optional>true</optional>
    </dependency>
    <!--
        <dependency>
          <groupId>axion</groupId>
          <artifactId>axion</artifactId>
          <version>1.0-M3-dev</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.apache.derby</groupId>
          <artifactId>derbyclient</artifactId>
          <version>10.1.2.1</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>hsqldb</groupId>
          <artifactId>hsqldb</artifactId>
          <version>1.8.0.4</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>mckoi</groupId>
          <artifactId>mckoi</artifactId>
          <version>1.0.2</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>mysql</groupId>
          <artifactId>mysql-connector-java</artifactId>
          <version>3.1.12</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>postgresql</groupId>
          <artifactId>postgresql</artifactId>
          <version>8.1-404.jdbc3</version>
          <scope>test</scope>
        </dependency>
     -->
    <!-- NB: No public driver for DB2, interbase, sapdb, oracle, sqlserver -->
  </dependencies>

  <profiles>
    <profile>
      <id>checkstyle</id>
      <build>
        <defaultGoal>checkstyle:checkstyle</defaultGoal>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-checkstyle-plugin</artifactId>
            <configuration>
              <consoleOutput>true</consoleOutput>
              <failsOnError>true</failsOnError>
              <includeTestSourceDirectory>true</includeTestSourceDirectory>
              <configLocation>src/main/checkstyle/ddlutils-checks.xml</configLocation>
              <headerLocation>src/main/checkstyle/license-check.txt</headerLocation>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>test</id>
      <activation>
        <property>
          <name>testDb</name>
          <value>hsqldb</value>
        </property>
      </activation>
      <dependencies>
        <dependency>
          <groupId>hsqldb</groupId>
          <artifactId>hsqldb</artifactId>
          <version>1.8.0.4</version>
          <scope>test</scope>
        </dependency>
      </dependencies>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <systemProperties>
                <property>
                  <name>jdbc.properties.file</name>
                  <value>/jdbc.properties.hsqldb</value>
                </property>
              </systemProperties>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
          <encoding>${project.build.sourceEncoding}</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-project-info-reports-plugin</artifactId>
        <version>2.9</version>
        <reportSets>
          <reportSet>
            <reports/>
          </reportSet>
        </reportSets>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.0.1</version>
        <configuration>
          <stylesheetfile>src/site/javadoc/stylesheet.css</stylesheetfile>
        </configuration>
      </plugin>
      <plugin>
        <groupId>kr.motd.maven</groupId>
        <artifactId>sphinx-maven-plugin</artifactId>
        <version>2.10.0</version>
        <configuration>
          <builder>html</builder>
        </configuration>
      </plugin>
    </plugins>
  </reporting>
</project>
